--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@koa/router": "^10.1.1",
     "joi": "^17.6.0",
     "koa": "^2.13.4",
-    "koa-basic-auth": "^4.0.0",
-    "koa-bodyparser": "^4.3.0"
+    "koa-bodyparser": "^4.3.0",
+    "koa-session": "^6.2.0"
   }
 }
